add: mesheryctl connection view command in cmd.yml
Signed-off-by: Saurabh Kumar Singh <singh1203.ss@gmail.com>

--- a/docs/_data/mesheryctlcommands/cmds.yml
+++ b/docs/_data/mesheryctlcommands/cmds.yml
@@ -992,6 +992,10 @@ exp:
           count:
             name: --count
             description: (optional) Get the number of exp connections in total
+      view:
+        name: view
+        description: View a specific connection details by id
+        usage: mesheryctl exp connections view [connection_id]
   environment:
     name: environment
     description: View list of environments and detail of environments
