--- a/.github/workflows/build-ui-and-server.yml
+++ b/.github/workflows/build-ui-and-server.yml
@@ -104,6 +104,7 @@ jobs:
   tests-ui-e2e:
     needs: [build-backend, ui-build]
     name: UI end-to-end tests
+    environment: staging-playground
     if: github.repository == 'meshery/meshery'
     runs-on: ubuntu-22.04
     timeout-minutes: 45
