--- a/.github/workflows/comment-e2e-test.yml
+++ b/.github/workflows/comment-e2e-test.yml
@@ -19,6 +19,22 @@ jobs:
         name: e2e-test-reporter
         github-token: ${{ secrets.GH_ACCESS_TOKEN }}
         run-id: ${{ github.event.workflow_run.id }}
+    - name: Find Comment
+      uses: peter-evans/find-comment@v2
+      id: fc
+      with:
+        issue-number: ${{ github.event.pull_request.number }}
+        comment-author: 'github-actions[bot]'
+        body-includes: Test run results
+    - name: Delete Previous Comment
+      if: steps.fc.outputs.comment-id != ''
+      uses: actions/github-script@v6
+      with:
+        script: |
+          github.rest.issues.deleteComment({
+            owner: context.repo.owner,
+            repo: context.repo.repo,
+            comment_id: ${{ steps.fc.outputs.comment-id }}
     - name: Comment on staging url
       uses: actions/github-script@60a0d83039c74a4aee543508d2ffcb1c3799cdea # v7.0.1
       with:
