--- a/.github/workflows/comment-e2e-test.yml
+++ b/.github/workflows/comment-e2e-test.yml
@@ -20,7 +20,7 @@ jobs:
         github-token: ${{ secrets.GH_ACCESS_TOKEN }}
         run-id: ${{ github.event.workflow_run.id }}
     - name: Find Comment
-      uses: peter-evans/find-comment@v2
+      uses: peter-evans/find-comment@3eae4d37986fb5a8592848f6a574fdf654e61f9e # v3.1.0
       id: fc
       with:
         issue-number: ${{ github.event.pull_request.number }}
