fix: comment not send when not find last comment
Signed-off-by: Jerens Soerjadi Lensun <jerensslensun@gmail.com>

--- a/.github/workflows/comment-e2e-test.yml
+++ b/.github/workflows/comment-e2e-test.yml
@@ -36,6 +36,7 @@ jobs:
             repo: context.repo.repo,
             comment_id: ${{ steps.fc.outputs.comment-id }}
     - name: Comment on staging url
+      if: ${{ !cancelled() }}
       uses: actions/github-script@60a0d83039c74a4aee543508d2ffcb1c3799cdea # v7.0.1
       with:
         script: |
