--- a/docs/_data/toc.yml
+++ b/docs/_data/toc.yml
@@ -168,6 +168,8 @@
         url: guides/tutorials/exploring-kubernetes-cronjobs
       - title: Understanding Kubernetes ConfigMaps and Secrets
         url: guides/tutorials/kubernetes-configmaps-secrets
+      - title: Deploying PHP Guestbook application with Redis in Meshery
+        url: guides/tutorials/deploying-php-app-with-redis
     - title: Upgrading Meshery ↆ
       url: installation/upgrades
       children:
