--- a/ui/package.json
+++ b/ui/package.json
@@ -63,13 +63,9 @@
         "babel-plugin-istanbul": "^6.0.0",
         "babel-plugin-relay": "^13.2.0",
         "billboard.js": "^3.10.2",
-        "caniuse-lite": "^1.0.30001387",
         "classnames": "^2.3.1",
         "codemirror": "^5.65.8",
-        "color-string": "^1.5.5",
-        "cron-time-generator": "^2.0.3",
         "cross-env": "^7.0.3",
-        "glob-parent": "^5.1.2",
         "graphql": "^16.8.1",
         "graphql-ws": "^5.14.3",
         "humanize-duration": "^3.31.0",
@@ -78,7 +74,6 @@
         "jsonlint-mod": "^1.7.6",
         "jss": "latest",
         "lodash": "^4.17.21",
-        "minimist": ">=1.2.2",
         "mochawesome": "^7.1.3",
         "moment": "^2.29.4",
         "mui-datatables": "^3.7.8",
@@ -110,7 +105,6 @@
         "redux": "^4.2.0",
         "redux-thunk": "^2.4.0",
         "relay-runtime": "^15.0.0",
-        "set-value": "^4.0.1",
         "styled-jsx": "^5.1.2",
         "tar": "^6.2.1",
         "universal-cookie": "^7.1.4",
@@ -121,7 +115,6 @@
         "@4tw/cypress-drag-drop": "^2.2.5",
         "@babel/core": "^7.21.3",
         "@babel/eslint-parser": "^7.22.11",
-        "@babel/traverse": "^7.24.1",
         "@babel/types": "^7.23.5",
         "@cypress/code-coverage": "^3.12.39",
         "@next/eslint-plugin-next": "^13.1.2",
@@ -151,7 +144,6 @@
         "prettier": "^3.0.3",
         "relay-compiler": "^16.2.0",
         "start-server-and-test": "^1.13.1",
-        "webpack": "^5.76.0",
-        "webpack-cli": "^5.1.4"
+        "webpack": "^5.76.0"
     }
 }
