update hierarchical parent relationship
Signed-off-by: MUzairS15 <muzair.shaikh810@gmail.com>

--- a/server/meshmodel/kubernetes/v1.25.2/v1.0.0/relationships/hierarchical-inventory-configMap-to-deployment.json
+++ b/server/meshmodel/kubernetes/v1.25.2/v1.0.0/relationships/hierarchical-inventory-configMap-to-deployment.json
@@ -42,7 +42,13 @@
               "mutatorRef": [
                 [
                   "displayName"
+                ],
+                [
+                  "configuration",
+                  "metadata",
+                  "namespace"
                 ]
+                
               ],
               "description": "In Kubernetes, ConfigMaps are a versatile resource that can be referenced by various other resources to provide configuration data to applications or other Kubnernetes resources.\n\nBy referencing ConfigMaps in these various contexts, you can centralize and manage configuration data more efficiently, allowing for easier updates, versioning, and maintenance of configurations in a Kubernetes environment."
             }
@@ -71,6 +77,11 @@
                   "0",
                   "configMapRef",
                   "name"
+                ],
+                [
+                  "configuration",
+                  "metadata",
+                  "namespace"
                 ]
               ],
               "description": "Deployments can reference ConfigMaps to inject configuration data into the Pods they manage. This is useful for maintaining consistent configuration across replica sets.\n\nThe keys from the ConfigMap will be exposed as environment variables to the containers within the pods managed by the Deployment."
