--- a/.github/workflows/build-and-release-dde.yml
+++ b/.github/workflows/build-and-release-dde.yml
@@ -60,3 +60,46 @@ jobs:
           echo "GIT_VERSION=$GIT_VERSION" >> $GITHUB_ENV
           echo "GIT_STRIPPED_VERSION=$GIT_STRIPPED_VERSION" >> $GITHUB_ENV
         shell: bash
+
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v3
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+      - name: Docker Meta
+        id: meta
+        uses: docker/metadata-action@v3
+        with:
+          images: meshery/docker-extension-meshery
+          flavor: |
+            latest=true
+          tags: |
+            type=raw,value=${{env.RELEASE_CHANNEL}}-{{sha}}
+            type=semver,pattern={{version}},value=${{env.GIT_STRIPPED_VERSION}}
+            type=raw,value=${{env.RELEASE_CHANNEL}}-{{tag}},enable=${{ startsWith(github.ref, 'refs/tags/v') }}
+            type=raw,value=${{env.RELEASE_CHANNEL}}-latest
+            type=raw,value=${{env.RELEASE_CHANNEL}}-${{env.GIT_VERSION}},enable=${{ startsWith(github.ref, 'refs/tags/v') }}
+      - name: Login to DockerHub
+        uses: docker/login-action@v2
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
+      - name: Build and Push
+        uses: docker/build-push-action@v2
+        with:
+          context: "{{defaultContext}}:install/docker-extension"
+          push: true
+          build-args: |
+            GIT_STRIPPED_VERSION=${{env.GIT_STRIPPED_VERSION}}
+            GIT_VERSION=${{env.GIT_VERSION}}
+            RELEASE_CHANNEL=${{env.RELEASE_CHANNEL}}
+          tags: ${{ steps.meta.outputs.tags }}
+          platforms: linux/amd64,linux/arm64
+
+      # -
+      #   name: Docker Hub Description
+      #   uses: peter-evans/dockerhub-description@v3
+      #   with:
+      #     username: ${{ secrets.DOCKER_USERNAME }}
+      #     password: ${{ secrets.DOCKER_PASSWORD }}
+      #     repository: meshery/meshery-docker-extension
+      #     readme-filepath: /install/docker-extension/README.md
