--- a/docs/_data/toc.yml
+++ b/docs/_data/toc.yml
@@ -167,12 +167,14 @@
     - title: 🧑‍🔬 Tutorials ↆ
       url: guides/tutorials
       children:
-      - title: Exploring Kubernetes Pods
-        url: guides/tutorials/kubernetes-pods
-      - title: Exploring Kubernetes ConJobs
+      - title: Exploring Kubernetes CronJobs
         url: guides/tutorials/exploring-kubernetes-cronjobs
-      - title: Understanding Kubernetes ConfigMaps and Secrets
+      - title: Understanding Kubernetes ConfigMaps and Secrets with Meshery
         url: guides/tutorials/kubernetes-configmaps-secrets
+      - title: Exploring Kubernetes Pods with Meshery
+        url: guides/tutorials/kubernetes-pods
+      - title: Deploying WordPress and MySQL with Persistent Volumes with Meshery
+        url: guides/tutorials/wordpress-mysql-persistentvolume
 # - title: ⚙️ Tasks
 #   url: tasks
 #   links:
