Refactor build-ui-and-server.yml workflow
Signed-off-by: Lee Calcote <lee.calcote@layer5.io>

--- a/.github/workflows/build-ui-and-server.yml
+++ b/.github/workflows/build-ui-and-server.yml
@@ -117,11 +117,11 @@ jobs:
         with:
           repository: layer5io/meshery-istio
           path: ./meshery-istio
-      - name: Check out meshery-consul code
-        uses: actions/checkout@v4
-        with:
-          repository: layer5io/meshery-consul
-          path: ./meshery-consul
+      # - name: Check out meshery-consul code
+      #   uses: actions/checkout@v4
+      #   with:
+      #     repository: layer5io/meshery-consul
+      #     path: ./meshery-consul
       - name: Create k8s Kind Cluster
         uses: helm/kind-action@v1.8.0
         with:
@@ -136,12 +136,12 @@ jobs:
           cd ./meshery-istio
           go run main.go &
           sleep 60
-      - name: Run meshery-consul
-        run: |
-          mkdir -p /home/runner/.meshery/bin
-          cd ./meshery-consul
-          go run main.go &
-          sleep 60
+      # - name: Run meshery-consul
+      #   run: |
+      #     mkdir -p /home/runner/.meshery/bin
+      #     cd ./meshery-consul
+      #     go run main.go &
+      #     sleep 60
       - name: Setup node
         uses: actions/setup-node@v4
         with:
