chore downgrade golang
Signed-off-by: leecalcote <leecalcote@gmail.com>

--- a/.github/workflows/build-and-release-stable.yml
+++ b/.github/workflows/build-and-release-stable.yml
@@ -193,7 +193,7 @@ jobs:
     name: Deploy CNCF Playground
     uses: meshery/meshery/.github/workflows/cncf-playground-deploy-meshery.yaml@master
     with:
-      image: ${{ secrets.IMAGE_NAME }}:playground-${GITHUB_REF/refs\/tags\//}
+      image: layer5/meshery:playground-${GITHUB_REF/refs\/tags\//}
     secrets: inherit
   
   call-meshery-extensions-playground-rollout:
@@ -202,7 +202,7 @@ jobs:
     name: Deploy CNCF Extensions Playground
     uses: layer5labs/meshery-extensions-packages/.github/workflows/deploy-meshery-extensions-playground.yml@master
     with:
-      image: ${{ secrets.IMAGE_NAME }}:playground-${GITHUB_REF/refs\/tags\//}
+      image: layer5/meshery:playground-${GITHUB_REF/refs\/tags\//}
     secrets: inherit
   
   email-on-failure:
