--- a/.github/workflows/build-and-release-stable.yml
+++ b/.github/workflows/build-and-release-stable.yml
@@ -140,12 +140,12 @@ jobs:
         with:
           go-version: "1.21"
       - name: goreleaser with tag
-        uses: goreleaser/goreleaser-action@v5
+        uses: goreleaser/goreleaser-action@v6
         env:
           GITHUB_TOKEN: ${{ secrets.RELEASE_NOTES_PAT }}
           RELEASE_CHANNEL: "stable"
         with:
-          version: latest
+          version: '~> v2'
           args: release --clean --skip=validate
       - name: bump homebrew-core formula
         uses: mislav/bump-homebrew-formula-action@v3
