Made all the changes
Signed-off-by: Nandika Agrawal <93462818+Nandika-A@users.noreply.github.com>

--- a/docs/_data/toc.yml
+++ b/docs/_data/toc.yml
@@ -121,7 +121,7 @@
     - title: Configuring Kubernetes Infrastructure ↆ
       url: guides/configuration-management
       children:
-      - title: Configuring your Cloud Native Infrastructure and Applications
+      - title: Working with Designs
         url: guides/configuration-management/working-with-designs
       - title: Creating a Meshery Design
         url: guides/creating-a-meshery-design
@@ -129,7 +129,7 @@
         url: guides/configuration-management/filter-management
       - title: Importing Designs
         url: guides/configuration-management/importing-designs
-      - title: Cloud Native Design Patterns
+      - title: Working with Design Patterns
         url: guides/configuration-management/pattern-management
       - title: Push or Pull a Model Image
         url: guides/configuration-management/push-pull-model-image
@@ -153,7 +153,7 @@
       children:
         - title: Authenticating with Meshery via CLI
           url: guides/mesheryctl/authenticate-with-meshery-via-cli
-        - title: Configuring Autocompletion for `mesheryctl`
+        - title: Configuring Autocompletion for mesheryctl
           url: guides/mesheryctl/configuring-autocompletion-for-mesheryctl
         - title: Running system checks using Meshery CLI
           url: guides/mesheryctl/running-system-checks-using-mesheryctl
@@ -161,8 +161,6 @@
           url: guides/mesheryctl/system-commands
         - title: Using meshery CLI
           url: guides/mesheryctl/working-with-mesheryctl
-        - title: Upgrading Meshery CLI
-          url: installation/upgrades#upgrading-mesheryctl-using-homebrew
     - title: Troubleshooting Guides ↆ
       url: guides/troubleshooting
       children:
