--- a/.github/workflows/first-time-contributor.yml
+++ b/.github/workflows/first-time-contributor.yml
@@ -1,9 +1,7 @@
 name: First-Time Contributor Welcome
-
 on:
   pull_request:
     types: [opened]
-
 jobs:
   welcome:
     runs-on: ubuntu-latest
@@ -14,18 +12,21 @@ jobs:
         with:
           github-token: ${{ secrets.GITHUB_TOKEN }}
           script: |
+            const message = `Welcome, @${{ github.event.pull_request.user.login }}! Thank you for your first contribution! 🎉 A contributor will be by to give feedback soon. In the meantime, please review the [Newcomers' Guide](https://layer5.io/community/newcomers) and be sure to join the [community Slack](https://slack.meshery.io/).
+
+            <p align="center" width="100%">
+            <img src="https://github.com/user-attachments/assets/ba4699dc-18b2-4884-9dce-36ed47c38e93" width="30%"  />
+            </p>
+
+            Be sure to double-check that you have signed your commits. 
+            Here are instructions for [making signing an implicit activity while performing a commit](https://docs.meshery.io/project/contributing#general-contribution-flow).`;
+
             github.rest.issues.createComment({
               issue_number: context.issue.number,
               owner: context.repo.owner,
               repo: context.repo.repo,
-              body: "Welcome, @${{ github.event.pull_request.user.login }}! Thank you for your first contribution! 🎉 A contributor will be by to give feedback soon. In the meantime, please review the [Newcomers' Guide](https://layer5.io/community/newcomers) and be sure to join the [community Slack](https://slack.meshery.io/).
-              <p align="center" width="100%">
-              <img src="https://github.com/user-attachments/assets/f3f7d995-fc9a-4aec-8c9d-ed6570fb56ab" width="65%"  />
-              </p>
-              Be sure to double-check that you have signed your commits. 
-              Here are instructions for [making signing an implicit activity while peforming a commit](https://docs.meshery.io/project/contributing#general-contribution-flow)."
+              body: message
             });
-
       - name: Label Pull Request (Optional)
         uses: actions/github-script@v6
         with:
