--- a/.github/workflows/go-mod-sync.yaml
+++ b/.github/workflows/go-mod-sync.yaml
@@ -5,37 +5,40 @@ on:
     branches:
       - "master"
     paths:
-      - "go.mod"
+      - "server/go.mod"
 jobs:
   sync:
     if: github.repository == 'meshery/meshery'
     name: sync
     runs-on: ubuntu-22.04
     steps:
-    - name: check out code for meshery
+    - name: Checkout meshery/meshery
       uses: actions/checkout@master
       with:
         repository: meshery/meshery
         token: ${{ secrets.RELEASEDRAFTER_PAT }}
         path: meshery
-    - name: Check out code for meshery-extensions
+
+    - name: Checkout meshery-extensions
       uses: actions/checkout@master
       with:
         repository: layer5labs/meshery-extensions
         token: ${{ secrets.RELEASEDRAFTER_PAT }}
         path: meshery-extensions
+
     - name: Setup Go
-      uses: actions/setup-go@master
+      uses: actions/setup-go@v5
       with:
         go-version: "1.21"
-    - name: Go mod sync utility
+
+    - name: go.mod Sync Utility
       run: cd meshery-extensions;make graphql-sync;
 
     - name: Pull changes from remote
       working-directory: ./meshery-extensions
       run: git pull origin master
 
-    - name: Commit
+    - name: Commit Changes
       uses: stefanzweifel/git-auto-commit-action@v5
       with:
         repository: meshery-extensions
@@ -45,7 +48,8 @@ jobs:
         commit_options: '--signoff'
         commit_message: 'Upgrading go.mod in response to meshery/meshery'
         branch: master
-  notify-via-email:
+       
+  notify-of-failure-via-email:
     runs-on: ubuntu-latest
     needs:
       - sync
