--- a/.github/workflows/build-release.yml
+++ b/.github/workflows/build-release.yml
@@ -1,7 +1,9 @@
 name: Notify Meshery Extensions channel build
 on:
   workflow_dispatch:
-
+  push:
+    tags:
+      - 'v*'
 jobs:
   notfiy-build:
     name: Notify providers for Meshery Extensions channel build
