--- a/.github/workflows/build-ui-and-server.yml
+++ b/.github/workflows/build-ui-and-server.yml
@@ -172,12 +172,8 @@ jobs:
           name: provider-ui
           path: /home/runner/work/meshery/meshery/provider-ui/out
       - name: Run Meshery UI and Server
-        env:
-          PROVIDER_BASE_URLS: http://localhost:9876
-          PORT: 9081
-          ADAPTER_URLS: "localhost:10000 localhost:10001 localhost:10002 localhost:10003 localhost:10004 localhost:10009 localhost:10007"
         run: |
-          make server &
+          make server-stg &
           sleep 90
       - name: Install Playwright Browsers
         run: npx playwright install --with-deps
