--- a/.github/workflows/build-ui-and-server.yml
+++ b/.github/workflows/build-ui-and-server.yml
@@ -33,13 +33,12 @@ jobs:
           node-version: 18
           cache: 'npm'
           cache-dependency-path: '**/package-lock.json'
-      - name: build meshery-ui
-        # if: steps.meshery-ui-cache.outputs.cache-hit != 'true'
+      - name: Install meshery-ui and provider-ui deps
         run: |
-          make ui-meshery-build
-      - name: build provider-ui
+          make ui-setup
+      - name: Build meshery-ui and provider-ui
         run: |
-          make ui-provider-build
+          make ui-build
       - name: Upload meshery-ui artifacts
         uses: actions/upload-artifact@v4
         with:
