ci(build-ui-and-server): change to installing the deps using npm ci
Signed-off-by: Jerens Soerjadi Lensun <jerensslensun@gmail.com>

--- a/.github/workflows/build-ui-and-server.yml
+++ b/.github/workflows/build-ui-and-server.yml
@@ -111,7 +111,7 @@ jobs:
           make server-stg &
           sleep 90
       - name: Install Playwright
-        run: npm install @playwright/test
+        run: npm ci
         working-directory: ui
       - name: Install Playwright Browsers
         run: npx playwright install --with-deps
