--- a/.github/workflows/build-ui-and-server.yml
+++ b/.github/workflows/build-ui-and-server.yml
@@ -1,6 +1,6 @@
 name: Meshery UI and Server
 on:
-  pull_request_target:
+  pull_request:
     types: [opened, synchronize, reopened]
     branches:
       - "master"
@@ -16,11 +16,9 @@ on:
         required: true
         default: "warning"
 
-permissions: read-all
-
 jobs:
-  ui-build:
-    name: UI build
+  docker-build-testing:
+    name: Docker build for Testing
     if: github.repository == 'meshery/meshery'
     runs-on: ubuntu-22.04
     steps:
@@ -28,147 +26,170 @@ jobs:
         uses: actions/checkout@v4
         with:
           fetch-depth: 1
-      - uses: actions/setup-node@v4
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+      - name: Build and export
+        uses: docker/build-push-action@v6
         with:
-          node-version: 18
-          cache: 'npm'
-          cache-dependency-path: '**/package-lock.json'
-      - name: Build meshery-ui and provider-ui
-        run: |
-          make ui-build
-      - name: Upload meshery-ui artifacts
+          context: 'install/docker/testing'
+          tags: mesherytesting
+          outputs: type=docker,dest=/tmp/meshery-testing.tar
+      - name: Upload artifact
         uses: actions/upload-artifact@v4
         with:
-          name: meshery-ui
-          retention-days: 30
-          path: /home/runner/work/meshery/meshery/ui/out
-      - name: Upload provider-ui artifacts
-        uses: actions/upload-artifact@v4
-        with:
-          name: provider-ui
-          retention-days: 30
-          path: /home/runner/work/meshery/meshery/provider-ui/out
-  tests-ui-e2e:
-    needs: [ui-build]
-    name: UI end-to-end tests
-    environment: staging-playground
-    if: github.repository == 'meshery/meshery'
-    runs-on: ubuntu-22.04
-    timeout-minutes: 45
-    steps:
-      - name: Check out code
-        uses: actions/checkout@v4
-        with:
-          fetch-depth: 0
-      - name: Check out meshery-istio code
-        uses: actions/checkout@v4
-        with:
-          repository: layer5io/meshery-istio
-          path: ./meshery-istio
-      # - name: Check out meshery-consul code
-      #   uses: actions/checkout@v4
-      #   with:
-      #     repository: layer5io/meshery-consul
-      #     path: ./meshery-consul
-      - name: Create k8s Kind Cluster
-        uses: helm/kind-action@v1.10.0
-        with:
-          cluster_name: "kind-cluster"
-      - name: Setup Go
-        uses: actions/setup-go@master
-        with:
-          go-version: "1.21"
-      - name: Run meshery-istio
-        run: |
-          mkdir -p /home/runner/.meshery/bin
-          cd ./meshery-istio
-          go run main.go &
-          sleep 60
-      # - name: Run meshery-consul
-      #   run: |
-      #     mkdir -p /home/runner/.meshery/bin
-      #     cd ./meshery-consul
-      #     go run main.go &
-      #     sleep 60
-      - name: Setup node
-        uses: actions/setup-node@v4
-        with:
-          node-version: 18
-          cache: 'npm'
-          cache-dependency-path: '**/package-lock.json'
-      - name: Download meshery-ui artifacts
-        uses: actions/download-artifact@v4
-        with:
-          name: meshery-ui
-          path: /home/runner/work/meshery/meshery/ui/out
-      - name: Download provider-ui artifacts
-        uses: actions/download-artifact@v4
-        with:
-          name: provider-ui
-          path: /home/runner/work/meshery/meshery/provider-ui/out
-      - name: Run Meshery UI and Server
-        run: |
-          make server &
-          sleep 90
-      - name: Install Playwright
-        run: npm ci
-        working-directory: ui
-      - name: Install Playwright Browsers
-        run: npx playwright install --with-deps
-        working-directory: ui
-      - name: Run Playwright End-to-End Tests
-        env:
-          MESHERY_SERVER_URL: "http://localhost:9081"
-          REMOTE_PROVIDER_URL: "https://meshery.layer5.io"
-          REMOTE_PROVIDER_USER_EMAIL: ${{ secrets.REMOTE_PROVIDER_USER_EMAIL }}
-          REMOTE_PROVIDER_USER_PASSWORD: ${{ secrets.REMOTE_PROVIDER_USER_PASS }}
-          PROVIDER_TOKEN: ${{ secrets.PROVIDER_TOKEN }}
-          GITHUB_TOKEN: ${{ secrets.GH_ACCESS_TOKEN  }}
-        run: npx playwright test --project=chromium --project=firefox --reporter="./tests/e2e/custom-playwright-reporter.js" --max-failures=4
-        working-directory: ui
-      - name: Save PR number
-        if: ${{ !cancelled() }}
-        run: |
-            mkdir -p ./pr
-            echo ${{ github.event.number }} > ./pr/number
-      - name: Upload Test Report
-        if: ${{ !cancelled() }}
-        uses: actions/upload-artifact@834a144ee995460fba8ed112a2fc961b36a5ec5a # v4.3.6
-        with:
-            name: e2e-test-reporter
-            path: |
-                ui/test-report.md
-                pr/number
-            retention-days: 14
-  docker-build-test:
-    name: Docker build
-    if: github.repository == 'meshery/meshery'
-    runs-on: ubuntu-22.04
-    steps:
-      - name: Check out code
-        uses: actions/checkout@v4
-        with:
-          fetch-depth: 1
-      - name: Docker edge build & tag
-        if: startsWith(github.ref, 'refs/tags/') != true && success()
-        env:
-          RELEASE_CHANNEL: "edge"
-        run: |
-          DOCKER_BUILDKIT=1 docker build -f install/docker/Dockerfile --no-cache -t meshery:edge-latest --build-arg TOKEN=test --build-arg GIT_COMMITSHA=${GITHUB_SHA::8} --build-arg RELEASE_CHANNEL=${RELEASE_CHANNEL} .
-          docker tag meshery:edge-latest meshery:edge-${GITHUB_SHA::8}
-      - name: Docker edge push
-        if: github.event_name != 'pull_request' && startsWith(github.ref, 'refs/tags/') && success()
-        run: |
-          docker push ${{ secrets.IMAGE_NAME }}:edge-latest
-          docker push ${{ secrets.IMAGE_NAME }}:edge-${GITHUB_REF/refs\/tags\//}
-          docker push ${{ secrets.IMAGE_NAME }}:edge-${GITHUB_SHA::8}
-      - name: Docker Hub Description
-        if: github.event_name != 'pull_request' && startsWith(github.ref, 'refs/tags/') && success()
-        uses: peter-evans/dockerhub-description@v4
-        with:
-            username: ${{ secrets.DOCKERHUB_USERNAME }}
-            password: ${{ secrets.DOCKERHUB_PASSWORD }}
-            repository: ${{ secrets.IMAGE_NAME }}
+          name: meshery-testing
+          path: /tmp/meshery-testing.tar
+          retention-days: 14
+  # ui-build:
+  #   name: UI build
+  #   if: github.repository == 'meshery/meshery'
+  #   runs-on: ubuntu-22.04
+  #   steps:
+  #     - name: Check out code
+  #       uses: actions/checkout@v4
+  #       with:
+  #         fetch-depth: 1
+  #     - uses: actions/setup-node@v4
+  #       with:
+  #         node-version: 18
+  #         cache: 'npm'
+  #         cache-dependency-path: '**/package-lock.json'
+  #     - name: Build meshery-ui and provider-ui
+  #       run: |
+  #         make ui-build
+  #     - name: Upload meshery-ui artifacts
+  #       uses: actions/upload-artifact@v4
+  #       with:
+  #         name: meshery-ui
+  #         retention-days: 30
+  #         path: /home/runner/work/meshery/meshery/ui/out
+  #     - name: Upload provider-ui artifacts
+  #       uses: actions/upload-artifact@v4
+  #       with:
+  #         name: provider-ui
+  #         retention-days: 30
+  #         path: /home/runner/work/meshery/meshery/provider-ui/out
+  # tests-ui-e2e:
+  #   needs: [ui-build]
+  #   name: UI end-to-end tests
+  #   environment: staging-playground
+  #   if: github.repository == 'meshery/meshery'
+  #   runs-on: ubuntu-22.04
+  #   timeout-minutes: 45
+  #   steps:
+  #     - name: Check out code
+  #       uses: actions/checkout@v4
+  #       with:
+  #         fetch-depth: 0
+  #     - name: Check out meshery-istio code
+  #       uses: actions/checkout@v4
+  #       with:
+  #         repository: layer5io/meshery-istio
+  #         path: ./meshery-istio
+  #     # - name: Check out meshery-consul code
+  #     #   uses: actions/checkout@v4
+  #     #   with:
+  #     #     repository: layer5io/meshery-consul
+  #     #     path: ./meshery-consul
+  #     - name: Create k8s Kind Cluster
+  #       uses: helm/kind-action@v1.10.0
+  #       with:
+  #         cluster_name: "kind-cluster"
+  #     - name: Setup Go
+  #       uses: actions/setup-go@master
+  #       with:
+  #         go-version: "1.21"
+  #     - name: Run meshery-istio
+  #       run: |
+  #         mkdir -p /home/runner/.meshery/bin
+  #         cd ./meshery-istio
+  #         go run main.go &
+  #         sleep 60
+  #     # - name: Run meshery-consul
+  #     #   run: |
+  #     #     mkdir -p /home/runner/.meshery/bin
+  #     #     cd ./meshery-consul
+  #     #     go run main.go &
+  #     #     sleep 60
+  #     - name: Setup node
+  #       uses: actions/setup-node@v4
+  #       with:
+  #         node-version: 18
+  #         cache: 'npm'
+  #         cache-dependency-path: '**/package-lock.json'
+  #     - name: Download meshery-ui artifacts
+  #       uses: actions/download-artifact@v4
+  #       with:
+  #         name: meshery-ui
+  #         path: /home/runner/work/meshery/meshery/ui/out
+  #     - name: Download provider-ui artifacts
+  #       uses: actions/download-artifact@v4
+  #       with:
+  #         name: provider-ui
+  #         path: /home/runner/work/meshery/meshery/provider-ui/out
+  #     - name: Run Meshery UI and Server
+  #       run: |
+  #         make server &
+  #         sleep 90
+  #     - name: Install Playwright
+  #       run: npm ci
+  #       working-directory: ui
+  #     - name: Install Playwright Browsers
+  #       run: npx playwright install --with-deps
+  #       working-directory: ui
+  #     - name: Run Playwright End-to-End Tests
+  #       env:
+  #         MESHERY_SERVER_URL: "http://localhost:9081"
+  #         REMOTE_PROVIDER_URL: "https://meshery.layer5.io"
+  #         REMOTE_PROVIDER_USER_EMAIL: ${{ secrets.REMOTE_PROVIDER_USER_EMAIL }}
+  #         REMOTE_PROVIDER_USER_PASSWORD: ${{ secrets.REMOTE_PROVIDER_USER_PASS }}
+  #         PROVIDER_TOKEN: ${{ secrets.PROVIDER_TOKEN }}
+  #         GITHUB_TOKEN: ${{ secrets.GH_ACCESS_TOKEN  }}
+  #       run: npx playwright test --project=chromium --project=firefox --reporter="./tests/e2e/custom-playwright-reporter.js" --max-failures=4
+  #       working-directory: ui
+  #     - name: Save PR number
+  #       if: ${{ !cancelled() }}
+  #       run: |
+  #           mkdir -p ./pr
+  #           echo ${{ github.event.number }} > ./pr/number
+  #     - name: Upload Test Report
+  #       if: ${{ !cancelled() }}
+  #       uses: actions/upload-artifact@834a144ee995460fba8ed112a2fc961b36a5ec5a # v4.3.6
+  #       with:
+  #           name: e2e-test-reporter
+  #           path: |
+  #               ui/test-report.md
+  #               pr/number
+  #           retention-days: 14
+  # docker-build-test:
+  #   name: Docker build
+  #   if: github.repository == 'meshery/meshery'
+  #   runs-on: ubuntu-22.04
+  #   steps:
+  #     - name: Check out code
+  #       uses: actions/checkout@v4
+  #       with:
+  #         fetch-depth: 1
+  #     - name: Docker edge build & tag
+  #       if: startsWith(github.ref, 'refs/tags/') != true && success()
+  #       env:
+  #         RELEASE_CHANNEL: "edge"
+  #       run: |
+  #         DOCKER_BUILDKIT=1 docker build -f install/docker/Dockerfile --no-cache -t meshery:edge-latest --build-arg TOKEN=test --build-arg GIT_COMMITSHA=${GITHUB_SHA::8} --build-arg RELEASE_CHANNEL=${RELEASE_CHANNEL} .
+  #         docker tag meshery:edge-latest meshery:edge-${GITHUB_SHA::8}
+  #     - name: Docker edge push
+  #       if: github.event_name != 'pull_request' && startsWith(github.ref, 'refs/tags/') && success()
+  #       run: |
+  #         docker push ${{ secrets.IMAGE_NAME }}:edge-latest
+  #         docker push ${{ secrets.IMAGE_NAME }}:edge-${GITHUB_REF/refs\/tags\//}
+  #         docker push ${{ secrets.IMAGE_NAME }}:edge-${GITHUB_SHA::8}
+  #     - name: Docker Hub Description
+  #       if: github.event_name != 'pull_request' && startsWith(github.ref, 'refs/tags/') && success()
+  #       uses: peter-evans/dockerhub-description@v4
+  #       with:
+  #           username: ${{ secrets.DOCKERHUB_USERNAME }}
+  #           password: ${{ secrets.DOCKERHUB_PASSWORD }}
+  #           repository: ${{ secrets.IMAGE_NAME }}
   # validate the swagger docs
   swaggerci:
     if: github.repository == 'meshery/meshery'
