[Chore] Update goreleaser config to v2 and move config out of repo root
Signed-off-by: Lee Calcote <lee.calcote@layer5.io>

--- a/.github/workflows/build-and-release-stable.yml
+++ b/.github/workflows/build-and-release-stable.yml
@@ -146,7 +146,7 @@ jobs:
           RELEASE_CHANNEL: "stable"
         with:
           version: '~> v2'
-          args: release --clean --skip=validate
+          args: release --clean --skip=validate -f .github/.goreleaser.yml
       - name: bump homebrew-core formula
         uses: mislav/bump-homebrew-formula-action@v3
         with:
