Update mesheryctl-ci.yml to use version 2 in release workflow
Signed-off-by: Lee Calcote <lee.calcote@layer5.io>

--- a/.github/workflows/mesheryctl-ci.yml
+++ b/.github/workflows/mesheryctl-ci.yml
@@ -61,7 +61,7 @@ jobs:
         env:
           RELEASE_CHANNEL: "edge"
         with:
-          version: latest
+          version: 2
           args: release --snapshot --skip publish --clean -f .github/.goreleaser.yml
   mesheryctl_docs:
     if: "always() && github.event_name != 'pull_request' && github.repository == 'meshery/meshery' "
