Update version to 2 in release workflow
Signed-off-by: Lee Calcote <lee.calcote@layer5.io>

--- a/.github/workflows/build-and-release-stable.yml
+++ b/.github/workflows/build-and-release-stable.yml
@@ -145,7 +145,7 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.RELEASE_NOTES_PAT }}
           RELEASE_CHANNEL: "stable"
         with:
-          version: '~> v2'
+          version: 2
           args: release --clean --skip=validate -f .github/.goreleaser.yml
       - name: bump homebrew-core formula
         uses: mislav/bump-homebrew-formula-action@v3
