Update actions/checkout version in build-and-release-dde.yml
Signed-off-by: Lee Calcote <lee.calcote@layer5.io>

--- a/.github/workflows/build-and-release-dde.yml
+++ b/.github/workflows/build-and-release-dde.yml
@@ -41,7 +41,7 @@ jobs:
     runs-on: ubuntu-22.04
     steps:
       - name: Checkout 🛎️ repo
-        uses: actions/checkout@4
+        uses: actions/checkout@v4
       - name: Identify Release Values
         if: "${{ github.event.inputs.release-ver}} != 'v' }}"
         run: |
