updated-.regal/config-filpath
Signed-off-by: Vaibhav Mittal <vaibhavmittal146@gmail.com>

--- a/.github/workflows/regal-lint.yml
+++ b/.github/workflows/regal-lint.yml
@@ -18,4 +18,4 @@ jobs:
           version: 0.25.0
 
       - name: Lint
-        run: regal lint --format github ./server/meshmodel      
+        run: regal lint --config-file ./policies/wasm/policies/.regal/config.yaml --format github ./server/meshmodel  
