debug error code workflow
Signed-off-by: Eti Ijeoma <ijayeti@gmail.com>

--- a/.github/workflows/error-codes-updater.yaml
+++ b/.github/workflows/error-codes-updater.yaml
@@ -40,6 +40,8 @@ jobs:
 
       - name: Run Utility For Meshery Server
         run: |
+          echo $(pwd)
+          echo $(ls)
           ~/errorutil update -d . -i ./server/helpers -o ./server/helpers --skip-dirs mesheryctl
           output=$(~/errorutil -d . analyze -i ./server/helpers -o ./server/helpers --skip-dirs mesheryctl | wc -c)
           if [ "$output" -ne 0 ]; then
