--- a/docs/_config_dev.yml
+++ b/docs/_config_dev.yml
@@ -99,7 +99,9 @@ collections:
     permalink: reference/mesheryctl/:collection/:path
     name: mesheryctlcommands
   models:
-    output: true    
+    output: true
+  catalog:
+    output: true   
   # integrations:
   #   output: true
   #   permalink: /extensibility/:collection/:path    
