docs: add more explanation about gh actions
Signed-off-by: Jerens Soerjadi Lensun <jerensslensun@gmail.com>

--- a/docs/_data/toc.yml
+++ b/docs/_data/toc.yml
@@ -246,6 +246,8 @@
           grandchildren:
           - title: "End-to-End Testing"
             url: project/contributing/contributing-ui-tests
+          - title: "Github Actions"
+            url: project/contributing/contributing-github-actions
         - title: Adapters
           url: project/contributing/contributing-adapters
         - title: CLI ↆ
