--- a/docs/_data/toc.yml
+++ b/docs/_data/toc.yml
@@ -269,6 +269,8 @@
             url: project/contributing/contributing-ui-notification-center
         - title: Docker Extension
           url: project/contributing/contributing-docker-extension
+        - title: Policy Engine
+          url: project/contributing/contributing-rego
         - title: Models ↆ
           url: project/contributing/contributing-models
           grandchildren:
