--- a/.github/workflows/cncf-playground-deploy-meshery.yaml
+++ b/.github/workflows/cncf-playground-deploy-meshery.yaml
@@ -26,6 +26,7 @@ jobs:
                 cd meshery
                 git pull
                 docker compose -f install/playground/docker/docker-compose.yaml pull
+                docker compose -f install/playground/docker/docker-compose.yaml down
                 docker compose -f install/playground/docker/docker-compose.yaml up -d --remove-orphans
 #         steps:
 #          - uses: azure/setup-kubectl@v3
