ci: fix docker extensions build sync and cache
Signed-off-by: Jerens Soerjadi Lensun <jerensslensun@gmail.com>

--- a/install/docker-extension/Dockerfile
+++ b/install/docker-extension/Dockerfile
@@ -15,11 +15,9 @@ RUN --mount=type=cache,target=/go/pkg/mod \
 FROM node:14.17-alpine3.13 AS client-builder
 WORKDIR /ui
 # cache packages in layer
-COPY ui/package.json /ui/package.json
-COPY ui/package-lock.json /ui/package-lock.json
+COPY ui/package.json ui/package-lock.json ./
 ARG TARGETARCH
-RUN --mount=type=cache,target=/usr/src/app/.npm-${TARGETARCH} \
-  npm set cache /usr/src/app/.npm-${TARGETARCH} && \
+RUN --mount=type=cache,target=/root/.npm \
   npm ci
 # install
 COPY ui /ui
