--- a/docs/_data/navigation.yml
+++ b/docs/_data/navigation.yml
@@ -1,8 +1,13 @@
 - title: Quick Start
   url: "installation/quick-start"
-- title: Site
+- title: Website
   external_url: https://meshery.io
 - title: Discuss
   external_url: http://discuss.meshery.io/ 
+- title: Catalog
+  external_url: https://meshery.io/catalog
+- title: Blog
+  external_url: https://meshery.io/blog
+
 
 
