fix: fix docker build failure
Signed-off-by: Jerens Soerjadi Lensun <jerensslensun@gmail.com>

--- a/install/docker/testing/Dockerfile
+++ b/install/docker/testing/Dockerfile
@@ -17,6 +17,7 @@ RUN apk add --no-cache libc6-compat
 WORKDIR /app
 
 COPY ui/package.json ui/package-lock.json ./
+COPY ui/remote-component.config.js ui/ui.config.js ./
 ENV HUSKY=0
 RUN npm ci --omit=dev --legacy-peer-deps --ignore-scripts
 
