--- a/install/docker/Dockerfile
+++ b/install/docker/Dockerfile
@@ -16,6 +16,7 @@ FROM base-node AS meshery-ui-deps
 RUN apk add --no-cache libc6-compat
 WORKDIR /app
 COPY ui/package.json ui/package-lock.json ./
+COPY ui/remote-component.config.js ui/ui.config.js ./
 ENV HUSKY=0
 RUN npm ci --omit=dev --legacy-peer-deps --ignore-scripts
 
