--- a/ui/package.json
+++ b/ui/package.json
@@ -111,7 +111,7 @@
     "universal-cookie": "^7.1.4",
     "uuid": "^9.0.1",
     "xstate": "^5.18.2",
-    "rxjs": "^7.8.1",
+    "rxjs": "^7.8.1"
 
   },
   "devDependencies": {
