--- a/ui/package.json
+++ b/ui/package.json
@@ -38,7 +38,7 @@
     "@fortawesome/free-regular-svg-icons": "^6.6.0",
     "@fortawesome/free-solid-svg-icons": "^6.4.0",
     "@fortawesome/react-fontawesome": "^0.2.0",
-    "@layer5/sistent": "^0.14.104",
+    "@layer5/sistent": "^0.14.106",
     "@material-ui/core": "^4.12.4",
     "@material-ui/icons": "^4.11.3",
     "@material-ui/lab": "^4.0.0-alpha.61",
@@ -106,13 +106,12 @@
     "redux": "^4.2.0",
     "redux-thunk": "^2.4.0",
     "relay-runtime": "^15.0.0",
+    "rxjs": "^7.8.1",
     "styled-jsx": "^5.1.2",
     "tar": "^7.4.3",
     "universal-cookie": "^7.1.4",
     "uuid": "^9.0.1",
-    "xstate": "^5.18.2",
-    "rxjs": "^7.8.1"
-
+    "xstate": "^5.18.2"
   },
   "devDependencies": {
     "@actions/core": "^1.10.1",
