--- a/docs/_data/toc.yml
+++ b/docs/_data/toc.yml
@@ -175,8 +175,8 @@
           url: guides/tutorials/kubernetes-pods
         - title: Deploying WordPress and MySQL with Persistent Volumes with Meshery
           url: guides/tutorials/wordpress-mysql-persistentvolume
-        - title: Deploy an EC2 Instance with Meshery
-          url: guides/tutorials/deploy-an-ec2-instance-with-meshery
+        - title: Deploy an AWS EC2 Instance with Meshery
+          url: guides/tutorials/deploy-an-aws-ec2-instance-with-meshery
 # - title: ⚙️ Tasks
 #   url: tasks
 #   links:
