init modelscustominfo collection
Signed-off-by: Touriist <126756092+Touriist@users.noreply.github.com>

--- a/docs/_config_dev.yml
+++ b/docs/_config_dev.yml
@@ -101,7 +101,9 @@ collections:
   models:
     output: true
   catalog:
-    output: true   
+    output: true
+  modelscustominfo:
+    output: false 
   # integrations:
   #   output: true
   #   permalink: /extensibility/:collection/:path    
