--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -103,6 +103,8 @@ collections:
     output: true
   catalog:
     output: true
+  modelscustominfo:
+    output: false 
   # integrations:
   #   output: true
   #   permalink: /extensibility/:collection/:path    
